test_suite/tests/compile_fail/transform_no_args.rs
use ronky::Exported;

#[derive(Exported)]
#[arri(transform)]
enum ToWhat {
    IDontKnow,
}

fn main() {}
