test_suite/tests/compile_fail/transform_no_args.stderr
error: unexpected end of input, Expected '=' after 'transform'
 --> tests/compile_fail/transform_no_args.rs:4:17
  |
4 | #[arri(transform)]
  |                 ^
